Update `chip8-engine` and use one 64-bit word per video row

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,4 @@ authors = ["Dr. ERDI Gergo <gergo@erdi.hu>"]
 [dependencies]
 sdl2 = "0.29.0"
 crossbeam = "0.2.10"
-chip8-engine = { path="rust-avr-chip8-engine" }
+chip8-engine = { path="chip8-engine" }
