--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "rust-avr-chip8-engine"]
-	path = chip8-engine
-	url = git@github.com:gergoerdi/rust-avr-chip8-engine.git
+[submodule "chirp8-engine"]
+	path = chirp8-engine
+	url = git@github.com:gergoerdi/chirp8-engine.git
